--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
   </div>
   <button class="Rbtn">Rules</button>
-  <h1 id="level-title">Press A Key to Start Simon Game</h1>
+  <h1 id="level-title">Press A Key to Start Simon Game, Or Dubble Click On Screen</h1>
   <div class="container">
     <div lass="row">
 
