--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
             <li>  Continue to repeat Simon for as long as you can!</li>
       </ul>
   </div>
-  <button class="Rbtn">Rules</button>
-  <h1 id="level-title">Press A Key to Start Simon Game, Or Dubble Click On Screen</h1>
+  <div class="Btns">
+    <button class="Rbtn btns">Rules</button>
+    <button class="Sbtn btns"> Start</button>
+  </div>
+  
+  <h1 id="level-title">Press A Key to Start Simon Game, Or Click On Start</h1>
   <div class="container">
     <div lass="row">
 
